{
  "version": 4,
  "terraform_version": "1.7.2",
  "serial": 57,
  "lineage": "535187da-b130-70d8-e921-0c4421d325e5",
  "resources": [
    {
      "module": "module.app_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:927827734038:security-group/sg-04b5b25c87148e947",
            "description": "Security group for access to the healthystart app",
            "egress": [],
            "id": "sg-04b5b25c87148e947",
            "ingress": [],
            "name": "sonarcube-app-sg-20240209093048025300000005",
            "name_prefix": "sonarcube-app-sg-",
            "owner_id": "927827734038",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sonarcube-app-sg"
            },
            "tags_all": {
              "Name": "sonarcube-app-sg"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-057ffdf05dc876e9e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sonarcube-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.app_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "Internal network",
            "from_port": 0,
            "id": "sgrule-1315158775",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-04b5b25c87148e947",
            "security_group_rule_id": "sgr-091d994a8b08ebd5d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app_sg.aws_security_group.this",
            "module.app_sg.aws_security_group.this_name_prefix",
            "module.sonarcube-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.app_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow LB into healthystart app",
            "from_port": 9000,
            "id": "sgrule-3295192215",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-04b5b25c87148e947",
            "security_group_rule_id": "sgr-09a7fe12616817c1f",
            "self": false,
            "source_security_group_id": "sg-0e484c7f47c821fd7",
            "timeouts": null,
            "to_port": 9000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app_sg.aws_security_group.this",
            "module.app_sg.aws_security_group.this_name_prefix",
            "module.lb_sg.aws_security_group.this",
            "module.lb_sg.aws_security_group.this_name_prefix",
            "module.sonarcube-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.database_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:927827734038:security-group/sg-0ad38e48dc8e594ad",
            "description": "Security group Postgres access",
            "egress": [],
            "id": "sg-0ad38e48dc8e594ad",
            "ingress": [],
            "name": "sonarcube-db-sg-20240209093048311000000006",
            "name_prefix": "sonarcube-db-sg-",
            "owner_id": "927827734038",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sonarcube-db-sg"
            },
            "tags_all": {
              "Name": "sonarcube-db-sg"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-057ffdf05dc876e9e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sonarcube-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.database_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "PostgreSQL",
            "from_port": 5432,
            "id": "sgrule-2262186797",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ad38e48dc8e594ad",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.database_sg.aws_security_group.this",
            "module.database_sg.aws_security_group.this_name_prefix",
            "module.sonarcube-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.database_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Postgres from app SG",
            "from_port": 5432,
            "id": "sgrule-3917389798",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ad38e48dc8e594ad",
            "security_group_rule_id": "sgr-091627e0ff8f27a83",
            "self": false,
            "source_security_group_id": "sg-04b5b25c87148e947",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app_sg.aws_security_group.this",
            "module.app_sg.aws_security_group.this_name_prefix",
            "module.database_sg.aws_security_group.this",
            "module.database_sg.aws_security_group.this_name_prefix",
            "module.sonarcube-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.lb_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:927827734038:security-group/sg-0e484c7f47c821fd7",
            "description": "Security group with HTTPS access for healthystart load balancer",
            "egress": [],
            "id": "sg-0e484c7f47c821fd7",
            "ingress": [],
            "name": "sonarcube-lb-sg-20240209093048563300000007",
            "name_prefix": "sonarcube-lb-sg-",
            "owner_id": "927827734038",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sonarcube-lb-sg"
            },
            "tags_all": {
              "Name": "sonarcube-lb-sg"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-057ffdf05dc876e9e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sonarcube-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.lb_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "Internal network",
            "from_port": 0,
            "id": "sgrule-3426326735",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0e484c7f47c821fd7",
            "security_group_rule_id": "sgr-0b315666375f17e05",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.lb_sg.aws_security_group.this",
            "module.lb_sg.aws_security_group.this_name_prefix",
            "module.sonarcube-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.lb_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-2811764356",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e484c7f47c821fd7",
            "security_group_rule_id": "sgr-0d1a16f1efa84c30b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.lb_sg.aws_security_group.this",
            "module.lb_sg.aws_security_group.this_name_prefix",
            "module.sonarcube-vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTPS",
            "from_port": 443,
            "id": "sgrule-63153478",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e484c7f47c821fd7",
            "security_group_rule_id": "sgr-0e301b4868b61c473",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.lb_sg.aws_security_group.this",
            "module.lb_sg.aws_security_group.this_name_prefix",
            "module.sonarcube-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.sonarcube-alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:927827734038:loadbalancer/app/sonarcube/a70e3db0f76157b4",
            "arn_suffix": "app/sonarcube/a70e3db0f76157b4",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "sonarcube-2082752395.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:927827734038:loadbalancer/app/sonarcube/a70e3db0f76157b4",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "sonarcube",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0e484c7f47c821fd7"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a4851346a90f0a63"
              },
              {
                "subnet_id": "subnet-0c647e6f725ca8fbd"
              }
            ],
            "subnets": [
              "subnet-0a4851346a90f0a63",
              "subnet-0c647e6f725ca8fbd"
            ],
            "tags": {
              "Name": "sonarcube"
            },
            "tags_all": {
              "Name": "sonarcube"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_id": "vpc-057ffdf05dc876e9e",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.lb_sg.aws_security_group.this",
            "module.lb_sg.aws_security_group.this_name_prefix",
            "module.sonarcube-vpc.aws_subnet.public",
            "module.sonarcube-vpc.aws_vpc.this",
            "module.sonarcube-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.sonarcube-alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_http_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:927827734038:listener/app/sonarcube/a70e3db0f76157b4/7490f439f3ca97e6",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:927827734038:listener/app/sonarcube/a70e3db0f76157b4/7490f439f3ca97e6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:927827734038:loadbalancer/app/sonarcube/a70e3db0f76157b4",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.lb_sg.aws_security_group.this",
            "module.lb_sg.aws_security_group.this_name_prefix",
            "module.sonarcube-alb.aws_lb.this",
            "module.sonarcube-alb.aws_lb_target_group.main",
            "module.sonarcube-vpc.aws_subnet.public",
            "module.sonarcube-vpc.aws_vpc.this",
            "module.sonarcube-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.sonarcube-alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:927827734038:listener/app/sonarcube/a70e3db0f76157b4/af1fa710d0950335",
            "certificate_arn": "arn:aws:acm:us-east-1:927827734038:certificate/463c0f43-bd74-4610-8835-79f57863dc94",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:927827734038:targetgroup/tf-20240209093048583500000008/e4f11668cb0e05ef",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:927827734038:listener/app/sonarcube/a70e3db0f76157b4/af1fa710d0950335",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:927827734038:loadbalancer/app/sonarcube/a70e3db0f76157b4",
            "mutual_authentication": [
              {
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-TLS-1-2-Ext-2018-06",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.sonarcube-acm",
            "module.lb_sg.aws_security_group.this",
            "module.lb_sg.aws_security_group.this_name_prefix",
            "module.sonarcube-alb.aws_lb.this",
            "module.sonarcube-alb.aws_lb_target_group.main",
            "module.sonarcube-vpc.aws_subnet.public",
            "module.sonarcube-vpc.aws_vpc.this",
            "module.sonarcube-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.sonarcube-alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:927827734038:targetgroup/tf-20240209093048583500000008/e4f11668cb0e05ef",
            "arn_suffix": "targetgroup/tf-20240209093048583500000008/e4f11668cb0e05ef",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200,301,302",
                "path": "/",
                "port": "9000",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:927827734038:targetgroup/tf-20240209093048583500000008/e4f11668cb0e05ef",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-20240209093048583500000008",
            "name_prefix": "tf-",
            "port": 9000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "tags": {
            },
            "tags_all": {
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-057ffdf05dc876e9e"
          },
          "dependencies": [
            "module.sonarcube-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.sonarcube-vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:927827734038:network-acl/acl-0de95385f51933b97",
            "default_network_acl_id": "acl-0de95385f51933b97",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0de95385f51933b97",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "927827734038",
            "subnet_ids": [
              "subnet-02c1e438e29acc5ec",
              "subnet-0a4851346a90f0a63",
              "subnet-0a531bff7eeaf5c1c",
              "subnet-0ae3ca6a736f47f71",
              "subnet-0bb65d165ebcea429",
              "subnet-0c647e6f725ca8fbd"
            ],
            "tags": {
              "Name": "sonarcube-vpc-default"
            },
            "tags_all": {
              "Name": "sonarcube-vpc-default"
            },
            "vpc_id": "vpc-057ffdf05dc876e9e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sonarcube-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.sonarcube-vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:927827734038:route-table/rtb-0f18eb80ac706a091",
            "default_route_table_id": "rtb-0f18eb80ac706a091",
            "id": "rtb-0f18eb80ac706a091",
            "owner_id": "927827734038",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "sonarcube-vpc-default"
            },
            "tags_all": {
              "Name": "sonarcube-vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-057ffdf05dc876e9e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sonarcube-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.sonarcube-vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:927827734038:security-group/sg-03a5b991ae230b1b8",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-03a5b991ae230b1b8",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "927827734038",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sonarcube-vpc-default"
            },
            "tags_all": {
              "Name": "sonarcube-vpc-default"
            },
            "vpc_id": "vpc-057ffdf05dc876e9e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sonarcube-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.sonarcube-vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c24035860607830e",
            "domain": "vpc",
            "id": "eipalloc-0c24035860607830e",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-221-99-226.compute-1.amazonaws.com",
            "public_ip": "44.221.99.226",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "sonarcube-vpc-us-east-1a"
            },
            "tags_all": {
              "Name": "sonarcube-vpc-us-east-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.sonarcube-vpc.aws_internet_gateway.this",
            "module.sonarcube-vpc.aws_vpc.this",
            "module.sonarcube-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.sonarcube-vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:927827734038:internet-gateway/igw-095c75903290b035b",
            "id": "igw-095c75903290b035b",
            "owner_id": "927827734038",
            "tags": {
              "Name": "sonarcube-vpc"
            },
            "tags_all": {
              "Name": "sonarcube-vpc"
            },
            "vpc_id": "vpc-057ffdf05dc876e9e"
          },
          "dependencies": [
            "module.sonarcube-vpc.aws_vpc.this",
            "module.sonarcube-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.sonarcube-vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c24035860607830e",
            "association_id": "eipassoc-05008d21b1148910c",
            "connectivity_type": "public",
            "id": "nat-0dc754eea9a7c2700",
            "network_interface_id": "eni-0c0e0bb7042b0d5b7",
            "private_ip": "10.0.101.158",
            "public_ip": "44.221.99.226",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c647e6f725ca8fbd",
            "tags": {
              "Name": "sonarcube-vpc-us-east-1a"
            },
            "tags_all": {
              "Name": "sonarcube-vpc-us-east-1a"
            }
          },
          "dependencies": [
            "module.sonarcube-vpc.aws_eip.nat",
            "module.sonarcube-vpc.aws_internet_gateway.this",
            "module.sonarcube-vpc.aws_subnet.public",
            "module.sonarcube-vpc.aws_vpc.this",
            "module.sonarcube-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.sonarcube-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0278278dc9863bd8c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0dc754eea9a7c2700",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0278278dc9863bd8c",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sonarcube-vpc.aws_eip.nat",
            "module.sonarcube-vpc.aws_internet_gateway.this",
            "module.sonarcube-vpc.aws_nat_gateway.this",
            "module.sonarcube-vpc.aws_route_table.private",
            "module.sonarcube-vpc.aws_subnet.public",
            "module.sonarcube-vpc.aws_vpc.this",
            "module.sonarcube-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.sonarcube-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-095c75903290b035b",
            "id": "r-rtb-015c4c5afb05bd1b91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-015c4c5afb05bd1b9",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sonarcube-vpc.aws_internet_gateway.this",
            "module.sonarcube-vpc.aws_route_table.public",
            "module.sonarcube-vpc.aws_vpc.this",
            "module.sonarcube-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.sonarcube-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:927827734038:route-table/rtb-0278278dc9863bd8c",
            "id": "rtb-0278278dc9863bd8c",
            "owner_id": "927827734038",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "sonarcube-vpc-private"
            },
            "tags_all": {
              "Name": "sonarcube-vpc-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-057ffdf05dc876e9e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sonarcube-vpc.aws_vpc.this",
            "module.sonarcube-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.sonarcube-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:927827734038:route-table/rtb-015c4c5afb05bd1b9",
            "id": "rtb-015c4c5afb05bd1b9",
            "owner_id": "927827734038",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "sonarcube-vpc-public"
            },
            "tags_all": {
              "Name": "sonarcube-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-057ffdf05dc876e9e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sonarcube-vpc.aws_vpc.this",
            "module.sonarcube-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.sonarcube-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05da6c8d993885052",
            "route_table_id": "rtb-0278278dc9863bd8c",
            "subnet_id": "subnet-0ae3ca6a736f47f71"
          },
          "dependencies": [
            "module.sonarcube-vpc.aws_route_table.database",
            "module.sonarcube-vpc.aws_route_table.private",
            "module.sonarcube-vpc.aws_subnet.database",
            "module.sonarcube-vpc.aws_vpc.this",
            "module.sonarcube-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01d2ee4228e97fed7",
            "route_table_id": "rtb-0278278dc9863bd8c",
            "subnet_id": "subnet-0a531bff7eeaf5c1c"
          },
          "dependencies": [
            "module.sonarcube-vpc.aws_route_table.database",
            "module.sonarcube-vpc.aws_route_table.private",
            "module.sonarcube-vpc.aws_subnet.database",
            "module.sonarcube-vpc.aws_vpc.this",
            "module.sonarcube-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.sonarcube-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06cef9901b61c309d",
            "route_table_id": "rtb-0278278dc9863bd8c",
            "subnet_id": "subnet-0bb65d165ebcea429"
          },
          "dependencies": [
            "module.sonarcube-vpc.aws_route_table.private",
            "module.sonarcube-vpc.aws_subnet.private",
            "module.sonarcube-vpc.aws_vpc.this",
            "module.sonarcube-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04faa5f8d585fbe5c",
            "route_table_id": "rtb-0278278dc9863bd8c",
            "subnet_id": "subnet-02c1e438e29acc5ec"
          },
          "dependencies": [
            "module.sonarcube-vpc.aws_route_table.private",
            "module.sonarcube-vpc.aws_subnet.private",
            "module.sonarcube-vpc.aws_vpc.this",
            "module.sonarcube-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.sonarcube-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00033246f204adf81",
            "route_table_id": "rtb-015c4c5afb05bd1b9",
            "subnet_id": "subnet-0c647e6f725ca8fbd"
          },
          "dependencies": [
            "module.sonarcube-vpc.aws_route_table.public",
            "module.sonarcube-vpc.aws_subnet.public",
            "module.sonarcube-vpc.aws_vpc.this",
            "module.sonarcube-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d96075c2d24576cc",
            "route_table_id": "rtb-015c4c5afb05bd1b9",
            "subnet_id": "subnet-0a4851346a90f0a63"
          },
          "dependencies": [
            "module.sonarcube-vpc.aws_route_table.public",
            "module.sonarcube-vpc.aws_subnet.public",
            "module.sonarcube-vpc.aws_vpc.this",
            "module.sonarcube-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.sonarcube-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:927827734038:subnet/subnet-0ae3ca6a736f47f71",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ae3ca6a736f47f71",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "927827734038",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sonarcube-vpc-db-us-east-1a"
            },
            "tags_all": {
              "Name": "sonarcube-vpc-db-us-east-1a"
            },
            "vpc_id": "vpc-057ffdf05dc876e9e"
          },
          "dependencies": [
            "module.sonarcube-vpc.aws_vpc.this",
            "module.sonarcube-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:927827734038:subnet/subnet-0a531bff7eeaf5c1c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a531bff7eeaf5c1c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "927827734038",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sonarcube-vpc-db-us-east-1b"
            },
            "tags_all": {
              "Name": "sonarcube-vpc-db-us-east-1b"
            },
            "vpc_id": "vpc-057ffdf05dc876e9e"
          },
          "dependencies": [
            "module.sonarcube-vpc.aws_vpc.this",
            "module.sonarcube-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.sonarcube-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:927827734038:subnet/subnet-0bb65d165ebcea429",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bb65d165ebcea429",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "927827734038",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sonarcube-vpc-private-us-east-1a"
            },
            "tags_all": {
              "Name": "sonarcube-vpc-private-us-east-1a"
            },
            "vpc_id": "vpc-057ffdf05dc876e9e"
          },
          "dependencies": [
            "module.sonarcube-vpc.aws_vpc.this",
            "module.sonarcube-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:927827734038:subnet/subnet-02c1e438e29acc5ec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02c1e438e29acc5ec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "927827734038",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sonarcube-vpc-private-us-east-1b"
            },
            "tags_all": {
              "Name": "sonarcube-vpc-private-us-east-1b"
            },
            "vpc_id": "vpc-057ffdf05dc876e9e"
          },
          "dependencies": [
            "module.sonarcube-vpc.aws_vpc.this",
            "module.sonarcube-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.sonarcube-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:927827734038:subnet/subnet-0c647e6f725ca8fbd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c647e6f725ca8fbd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "927827734038",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sonarcube-vpc-public-us-east-1a"
            },
            "tags_all": {
              "Name": "sonarcube-vpc-public-us-east-1a"
            },
            "vpc_id": "vpc-057ffdf05dc876e9e"
          },
          "dependencies": [
            "module.sonarcube-vpc.aws_vpc.this",
            "module.sonarcube-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:927827734038:subnet/subnet-0a4851346a90f0a63",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a4851346a90f0a63",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "927827734038",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sonarcube-vpc-public-us-east-1b"
            },
            "tags_all": {
              "Name": "sonarcube-vpc-public-us-east-1b"
            },
            "vpc_id": "vpc-057ffdf05dc876e9e"
          },
          "dependencies": [
            "module.sonarcube-vpc.aws_vpc.this",
            "module.sonarcube-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.sonarcube-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:927827734038:vpc/vpc-057ffdf05dc876e9e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0de95385f51933b97",
            "default_route_table_id": "rtb-0f18eb80ac706a091",
            "default_security_group_id": "sg-03a5b991ae230b1b8",
            "dhcp_options_id": "dopt-04abd9c8160e00fca",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-057ffdf05dc876e9e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f18eb80ac706a091",
            "owner_id": "927827734038",
            "tags": {
              "Name": "sonarcube-vpc"
            },
            "tags_all": {
              "Name": "sonarcube-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}